<resources>
    <string name="app_name">btcontrol</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="bluetooth_power">Bluetooth Power</string>
    <string name="bluetooth_name">Bluetooth Name :: </string>
    <string name="bluetooth_scan_mode">Bluetooth Current Scan Mode :: </string>
    <string name="bluetooth_scan_mode_none">None</string>
    <string name="bluetooth_scan_mode_connectable_discoverable">Connectable Discoverable</string>
    <string name="bluetooth_scan_mode_connectable">Connectable</string>
    <string name="str_on">ON</string>
    <string name="str_off">OFF</string>
</resources>